[gd_scene load_steps=4 format=3 uid="uid://doyj1ckqaifax"]

[ext_resource type="Script" path="res://TitleScreen/menu.gd" id="1_cwtjw"]
[ext_resource type="FontFile" uid="uid://bmig6pfxgymgt" path="res://Font/tenderness.otf" id="1_x4hy8"]
[ext_resource type="PackedScene" uid="uid://dxa4hqlrime4h" path="res://Utility/basic_button.tscn" id="2_8l8in"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cwtjw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -17.0
offset_top = -20.0
offset_right = 666.0
offset_bottom = 393.0
color = Color(0.172549, 0.254902, 0.321569, 1)

[node name="Label" type="Label" parent="."]
offset_top = 8.0
offset_right = 640.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("1_x4hy8")
theme_override_font_sizes/font_size = 72
text = "The World Survivors"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_play" parent="." instance=ExtResource("2_8l8in")]
offset_left = 280.0
offset_top = 216.0
offset_right = 403.0
offset_bottom = 246.0
text = "Play"

[node name="btn_exit" parent="." instance=ExtResource("2_8l8in")]
offset_left = 281.0
offset_top = 326.0
offset_right = 403.0
offset_bottom = 356.0
text = "Exit"

[node name="btn_howToPlay" type="Button" parent="."]
offset_left = 280.0
offset_top = 253.0
offset_right = 402.0
offset_bottom = 284.0
text = "How to play"

[node name="btn_options" type="Button" parent="."]
offset_left = 280.0
offset_top = 290.0
offset_right = 404.0
offset_bottom = 321.0
text = "Options"

[connection signal="click_end" from="btn_play" to="." method="_on_btn_play_click_end"]
[connection signal="click_end" from="btn_exit" to="." method="_on_btn_exit_click_end"]
[connection signal="pressed" from="btn_options" to="." method="_on_btn_options_pressed"]
